# cdd-engine

./: ARCHITECTURE.md  Cargo.toml  README.md  dummy3.rs  dummy_exit0.wasm  dummy_fail_wasi.wasm  dummy_lib.wasm  dummy_trap.wasm
.github/workflows/: ci.yml  release.yml
mcp-1.0.0/: cli-gen.md
scripts/: update_shields.sh
src/: config.rs  daemon.rs  error.rs  graalvm_linker.rs  lib.rs  mcp.rs  wasm_executor.rs
tests/fixtures/: dummy_exit0.wasm  dummy_trap.wasm  dummy_wasi.wasm
