[package]
name = "cdd-engine"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
wasmtime = "45"
wasmtime-wasi = "45"
rquickjs = "0.12.0"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
