[package]
name = "cdd-engine"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
log = "0.4"
env_logger = "0.11"
derive_more = { version = "1.0", features = ["full"] }
config = "0.15.19"
once_cell = "1.21.4"
wasmtime = "45"
wasmtime-wasi = "45"
rquickjs = "0.12.0"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
wat = "1.252.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(tarpaulin)'] }
