[package]
name = "cdd-engine"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "sync", "time", "io-util", "macros"] }
log = "0.4"
env_logger = "0.11"
derive_more = { version = "1.0", features = ["display", "error", "from"] }
config = "0.15.19"
wasmtime = "45"
wasmtime-wasi = "45"
rquickjs = "0.12.0"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
wat = "1.252.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(tarpaulin)'] }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
opt-level = 'z'       # Optimize for size
lto = true            # Enable Link-Time Optimization
codegen-units = 1     # Maximize size reduction
panic = 'abort'       # Remove panic unwinding infrastructure
strip = true          # Strip debug symbols
